// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers tickerReducer should correctly getTicker 1`] = `
Object {
  "btcTicker": null,
  "crypto": null,
  "currency": null,
  "currencyFilters": Array [
    Object {
      "key": "btc",
      "name": "BTC",
    },
    Object {
      "key": "bits",
      "name": "bits",
    },
    Object {
      "key": "sats",
      "name": "satoshis",
    },
  ],
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
  ],
  "fromCurrency": null,
  "ltcTicker": null,
  "tickerLoading": true,
}
`;

exports[`reducers tickerReducer should correctly receiveTicker 1`] = `
Object {
  "btcTicker": undefined,
  "crypto": null,
  "currency": null,
  "currencyFilters": Array [
    Object {
      "key": "btc",
      "name": "BTC",
    },
    Object {
      "key": "bits",
      "name": "bits",
    },
    Object {
      "key": "sats",
      "name": "satoshis",
    },
  ],
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
  ],
  "fromCurrency": null,
  "ltcTicker": undefined,
  "tickerLoading": false,
}
`;

exports[`reducers tickerReducer should correctly setCrypto 1`] = `
Object {
  "btcTicker": null,
  "crypto": "foo",
  "currency": null,
  "currencyFilters": Array [
    Object {
      "key": "btc",
      "name": "BTC",
    },
    Object {
      "key": "bits",
      "name": "bits",
    },
    Object {
      "key": "sats",
      "name": "satoshis",
    },
  ],
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
  ],
  "fromCurrency": null,
  "ltcTicker": null,
  "tickerLoading": false,
}
`;

exports[`reducers tickerReducer should correctly setCurrency 1`] = `
Object {
  "btcTicker": null,
  "crypto": null,
  "currency": "foo",
  "currencyFilters": Array [
    Object {
      "key": "btc",
      "name": "BTC",
    },
    Object {
      "key": "bits",
      "name": "bits",
    },
    Object {
      "key": "sats",
      "name": "satoshis",
    },
  ],
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
  ],
  "fromCurrency": null,
  "ltcTicker": null,
  "tickerLoading": false,
}
`;

exports[`reducers tickerReducer should handle initial state 1`] = `
Object {
  "btcTicker": null,
  "crypto": null,
  "currency": null,
  "currencyFilters": Array [
    Object {
      "key": "btc",
      "name": "BTC",
    },
    Object {
      "key": "bits",
      "name": "bits",
    },
    Object {
      "key": "sats",
      "name": "satoshis",
    },
  ],
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
  ],
  "fromCurrency": null,
  "ltcTicker": null,
  "tickerLoading": false,
}
`;
